# yantrikdb-hermes-plugin

./: .gitignore  LICENSE  README.md  VERIFICATION.md  __init__.py  conftest.py  plugin.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
assets/demos/self-directing/: README.md  render.py
assets/demos/skill-lifecycle/: README.md  demo.py  demo.tape  demo_llm.py  demo_llm.tape  demo_v017_crystallization.py  demo_visual.py  seed_skills.py  transcript-llm.txt  transcript.txt
benchmarks/: README.md  _bootstrap.py  dataset.json  run_recall_bench.py
demos/: self_directing_memory.py
docs/: v0.5-design.md  v0.5-wave-a-e2e-results.md
hermes-test/scripts/: harness_wave_a.py
tests/: conftest.py  test_cli_installer.py  test_client.py  test_embedded.py  test_issue50_collision.py  test_manifest_sync.py  test_provider.py  test_recall_benchmark.py  test_semantic_contract.py  test_signature_parity.py  test_v06_features.py  test_v07_features.py  test_v08_features.py  test_v09_features.py
tests/comparison/: README.md  compare.py  probe.py  probe_scale.py
tests/comparison/findings_scale_lxc/byterover/: findings_scale.yaml
tests/comparison/findings_scale_lxc/hindsight/: findings_scale.yaml  transcript.md
tests/comparison/findings_scale_lxc/hindsight/raw/: recall-Q-contra-03.json
tests/comparison/findings_scale_lxc/holographic/: findings_scale.yaml  transcript.md
tests/comparison/findings_scale_lxc/holographic/raw/: recall-Q-real-06.json
tests/comparison/findings_scale_lxc/honcho/: findings_scale.yaml
tests/comparison/findings_scale_lxc/mem0/: findings_scale.yaml
tests/comparison/findings_scale_lxc/openviking/: findings_scale.yaml
tests/comparison/findings_scale_lxc/retaindb/: findings_scale.yaml
tests/comparison/findings_scale_lxc/supermemory/: findings_scale.yaml
tests/comparison/findings_scale_lxc/yantrikdb/: findings_scale.yaml  transcript.md
tests/comparison/findings_scale_lxc/yantrikdb/raw/: recall-Q-contra-01.json  recall-Q-contra-02.json  recall-Q-contra-03.json  recall-Q-contra-04.json  recall-Q-contra-05.json  recall-Q-dup-01.json  recall-Q-dup-02.json  recall-Q-dup-03.json  recall-Q-dup-04.json  recall-Q-dup-05.json  recall-Q-real-01.json  recall-Q-real-02.json  recall-Q-real-03.json  recall-Q-real-04.json  recall-Q-real-05.json  recall-Q-real-06.json  recall-Q-real-07.json  recall-Q-real-08.json  recall-Q-real-09.json  recall-Q-real-10.json
tests/comparison/fixtures/: corpus_1k.json  generate_corpus.py  queries_1k.json  recall.json  remember.json
tests/comparison/pr-validation/: README.md  transcript.txt  validate.py
tests/comparison/providers/yantrikdb/: adapter.py  findings.yaml  transcript.md
tests/comparison/providers/yantrikdb/raw/: remember-4-contradiction.json
tests/integration/: test_live.py  test_triggers_embedded.py
yantrikdb/: ARCHITECTURE.md  CHANGELOG.md  README.md  SECURITY.md  __init__.py  cli.py  client.py  embedded.py  embedders.py  extractor.py  plugin.yaml  ui.py
